--- a/css/style.css
+++ b/css/style.css
@@ -11,21 +11,49 @@
     margin: 0 auto;
     width: 70%;
     max-width: 1200px;
-   /* border: 1px solid red;*/
 }
 
 .product-row{
     width: 100%;
 }
 
-/* PRODUCTS */
-.product{
-display: inline-block;
-vertical-align: top;
-width: calc((100%/3) - 4px );
-/*border: 1px solid rgb(0, 255, 13);*/
+.heart{
+    background-color: #ffffff;
+    font-size: 2em;
+    text-align: center;
+    width: 10%;
+    position: absolute;
+    right: 0;
+    top: 5%;
 }
 
-.product-img{
+/* PRODUCTS */
+.product{
+    position:relative;
+    display: inline-block;
+    vertical-align: top;
+    width: calc((100%/3) - 4px );
+}
+
+.product-img-A{
     width: 100%;
 }
+
+.product-discount{
+    background-color: #ff0000;
+    color: #ffffff;
+    padding: .2em .5em;
+    position: absolute;
+    left: 0;
+    bottom: 15%;
+}
+
+.sustainability{
+    background-color: #008000;
+    color: #ffffff;
+    padding: .2em .5em;
+    position: absolute;
+    bottom: 15%;
+    left: 15%;
+}
+
