--- a/css/style.css
+++ b/css/style.css
@@ -45,30 +45,31 @@
     display: none;
 }
 
-/*.banner{
+ .banner{
     display: inline-block;
     position: absolute;
-    bottom: 20%;
+    bottom: 15%;
     left: 0;
-}*/
+} 
 
 .product-discount{
     background-color: #ff0000;
     color: #ffffff;
     padding: .2em .5em;
-    position: absolute;
+    /* position: absolute;
     left: 0;
-    bottom: 15%;
+    bottom: 15%; */
 }
 
 .sustainability{
     background-color: #008000;
     color: #ffffff;
-    padding: .2em .5em;
-    position: absolute;
-    bottom: 15%;
-    left: 15%;
     font-weight: bolder;
+    padding: .2em .5em;
+    /* position: absolute;
+    bottom: 15%;
+    left: 15%; */
+    
 }
 
 .product-description{
