--- a/Esercizio Prova 2/css/style.css
+++ b/Esercizio Prova 2/css/style.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+html{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+}
+
+/* GENERAL */
 .main-contenitor{
     margin: 0 auto;
     width: 70%;
@@ -12,9 +18,16 @@
     border: 1px solid #000000;
 }
 
+/* CARD DEL PRODOTTO */
 .product-card{
+    /*position:relative;*/
     display: inline-block;
     width: calc((100%/3) - 4px);
+    vertical-align: top;
+}
+
+.product-image{
+    position:relative;
 }
 
 .product-image img{
@@ -22,7 +35,18 @@
     border: 1px solid #ff0000;
 }
 
-
 .product-description{
     border: 1px solid #00ff22;
+}
+
+.image-hover{
+    display: none;
+}
+
+.product-image:hover .image-default{
+    display: none;
+}
+
+.product-image:hover .image-hover{
+    display: inline-block;
 }
